Enable toggling of transcripts

--- a/src/index.html
+++ b/src/index.html
@@ -94,9 +94,10 @@ And some other text
               "geneAnnotationHeight": 18,
               "geneLabelPosition": "outside",
               "geneStrandSpacing": 5,
-              "name": "transcripts-annotations-hg38-ensembl-v2-transcripts_names_test",
+              "name": "transcripts-annotations",
               "fontFamily": "Arial",
-              "maxTexts": 20
+              "maxTexts": 20,
+              "showToggleTranscriptsButton": true
             },
             "width": 768,
             "height": 300
