--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@ And some other text
               "labelBottomMargin": 0,
               "minHeight": 24,
               "plusStrandColor": "#bdbfff",
-              "minusStrandColor": "red",
+              "minusStrandColor": "#fabec2",
               "trackBorderWidth": 0,
               "trackBorderColor": "black",
               "showMousePosition": false,
@@ -225,6 +225,10 @@ And some other text
       "initialXDomain": [
         3021225.479926466,
         3022555.514469052
+        // 451246665.4697236,
+        // 451268523.8166885
+        // 2343474001.661236,
+        // 2343474540.4300046
       ],
       "initialYDomain": [
         -2681156982.8645544,
