--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,8 @@ And some other text
             "options": {
               "fontSize": 9,
               "labelFontColor": "#222222",
-              "labelBackgroundColor": "#e9e9e9",
+              "labelBackgroundPlusStrandColor": "#e9e9e9",
+              "labelBackgroundMinusStrandColor": "#e9e9e9",
               "minHeight": 24,
               "plusStrandColor": "#bdbfff",
               "minusStrandColor": "#fabec2",
