--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@ And some other text
               "type": "fasta",
               "fastaUrl": "https://aveit.s3.amazonaws.com/higlass/data/sequence/hg38.fa",
               "faiUrl": "https://aveit.s3.amazonaws.com/higlass/data/sequence/hg38.fa.fai",
-              "chromSizesUrl": "https://aveit.s3.amazonaws.com/higlass/data/sequence/hg38.mod.chrom.sizes"
+              "chromSizesUrl": "https://aveit.s3.amazonaws.com/higlass/data/sequence/hg38.chrom.sizes"
             },
             "options": {
               "colorAggregationMode": "none",
@@ -152,7 +152,7 @@ And some other text
                 "type": "fasta",
                 "fastaUrl": "https://aveit.s3.amazonaws.com/higlass/data/sequence/hg38.fa",
                 "faiUrl": "https://aveit.s3.amazonaws.com/higlass/data/sequence/hg38.fa.fai",
-                "chromSizesUrl": "https://aveit.s3.amazonaws.com/higlass/data/sequence/hg38.mod.chrom.sizes"
+                "chromSizesUrl": "https://aveit.s3.amazonaws.com/higlass/data/sequence/hg38.chrom.sizes"
               },
             },
             "width": 768,
