--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@ And some other text
             "options": {
               "fontSize": 9,
               "labelFontColor": "#222222",
-              "labelBackgroundColor": "#e9e9e9",
+              "labelBackgroundPlusStrandColor": "#ececec",
               "minHeight": 24,
               "plusStrandColor": "#bdbfff",
               "minusStrandColor": "#fabec2",
