--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     }
   </style>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/higlass@1.11.8/dist/hglib.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/higlass@1.11.11/dist/hglib.css">
   <link rel="stylesheet" href="hglib.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.2.3/pixi.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script crossorigin src="https://unpkg.com/higlass@1.11.8/dist/hglib.min.js"></script>
+  <script crossorigin src="https://cdn.jsdelivr.net/npm/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://cdn.jsdelivr.net/npm/react-dom@16/umd/react-dom.development.js"></script>
+  <script crossorigin src="https://cdn.jsdelivr.net/npm/higlass@1.11.11/dist/hglib.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.32.1/react-bootstrap.min.js"></script>
 </head>
 <body>
@@ -29,7 +29,7 @@ And some other text
 <div style="height: 1500px"></div>
 </body>
 <script src="hglib.js"></script>
-<script crossorigin src="https://unpkg.com/higlass-sequence/dist/higlass-sequence.js"></script>
+<script crossorigin src="https://cdn.jsdelivr.net/npm/higlass-sequence/dist/higlass-sequence.js"></script>
 <script>
   var viewConfig =
   {
